refactor: 내가 제안 받은 글 목록 조회(페이지네이셔느 응답값 추가) 로직 수정